<resources>
    <string name="app_name" translatable="false">iZiSandbox</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_client" translatable="false">Client</string>
    <string name="title_master" translatable="false">Master</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_gallery" translatable="false">Gallery</string>
    <string name="title_slideshow" translatable="false">Slideshow</string>
    <string name="title_graph_2" translatable="false">Next Graph</string>
    <string name="title_select_example" translatable="false">Select Example</string>
    <string name="shared_transition_colored" translatable="false">shared_transition_colored</string>
    <string name="shared_transition_red_ball" translatable="false">shared_transition_red_ball</string>
    <string name="shared_transition_blue_ball" translatable="false">shared_transition_blue_ball</string>
    <string name="shared_transition_green_ball" translatable="false">shared_transition_green_ball</string>
    <string name="shared_transition_orange_ball" translatable="false">shared_transition_orange_ball</string>
    <string name="notification_click_anywhere" translatable="false">Click anywhere to start activity</string>
    <string name="button_to_stub" translatable="false">To Stub Fragment</string>
    <string name="button_to_graph_2" translatable="false">To next graph</string>
    <string name="button_undo" translatable="false">undo</string>
    <string name="menu_izi_login" translatable="false">iZiLogin Example</string>
    <string name="menu_time_line_edu" translatable="false">Time Line Edu</string>
    <string name="menu_time_line_pro" translatable="false">Time Line Pro</string>
    <string name="menu_nav_graph" translatable="false">Navigation and Animations</string>
    <string name="menu_activity_transitions_1" translatable="false">Transitioning activities</string>
    <string name="menu_activities_shared_views" translatable="false">Activities shared views</string>
    <string name="menu_fragments_shared_views" translatable="false">Fragments shared views</string>
    <string name="menu_dialogs" translatable="false">Dialog Examples</string>
    <string name="menu_themes" translatable="false">UI Themes</string>
    <string name="menu_with_scenes_1" translatable="false">Scenes animation 1</string>
    <string name="menu_with_scenes_2" translatable="false">Scenes animation 2</string>
    <string name="menu_with_scenes_3" translatable="false">Scenes animation 3</string>
    <string name="menu_swipe_with_helper" translatable="false">Swipe with Helper</string>
    <string name="menu_swipe_gesture_detector" translatable="false">Swipe with Gesture Detector</string>
    <string name="menu_swipe_drop_undo" translatable="false">Swipe and Drop and Undo</string>
    <string name="menu_swipe_smart" translatable="false">Smart Swipe</string>
    <string name="menu_swipe_any_where" translatable="false">Swipe Anywhere</string>
    <string name="menu_swipe_accordion" translatable="false">Accordion Swipe</string>
    <string name="menu_dsl_edu" translatable="false">DSL Edu</string>
    <string name="menu_bottom_bar" translatable="false">Custom BottomAppBar</string>
    <string name="menu_telegram_profile_v1" translatable="false">Telegram Profile v1</string>
    <string name="menu_telegram_profile_v2" translatable="false">Telegram Profile v2</string>
    <string name="menu_rv_layout_animation" translatable="false">Recycler View Layout Animation</string>
    <string name="menu_rv_item_animation" translatable="false">Recycler View Item Animators</string>
    <string name="menu_rv_infinite_loop" translatable="false">Infinite Loop Recycler</string>
    <string name="menu_rv_infinite_date_picker" translatable="false">Infinite DatePicker</string>
    <string name="menu_rv_scrolling_calendar" translatable="false">Scrolling Calendar</string>
    <string name="menu_matrix_reflect_image" translatable="false">Reflect Image</string>
    <string name="menu_matrix_transform_image" translatable="false">Transform with matrix</string>
    <string name="menu_places_auto_complete" translatable="false">Places AutoComplete</string>
    <string name="menu_funny_avatar" translatable="false">Funny Avatar</string>
    <string name="menu_create_avatar" translatable="false">Create Avatar</string>
    <string name="menu_surface_edu_activity" translatable="false">Drawing On Surface</string>
    <string name="menu_scale_big_bitmap" translatable="false">Scale big bitmap</string>
    <string name="menu_grid_list" translatable="false">Grid List</string>
    <string name="menu_send_notification" translatable="false">Send Notification</string>
    <string name="menu_sticky_decor" translatable="false">Sticky Decorator</string>
    <string name="menu_time_line_2d" translatable="false">Time Line 2D</string>
    <string name="menu_buttons_containers" translatable="false">Buttons Containers</string>
    <string name="menu_rv_events" translatable="false">RecyclerView Events</string>
    <string name="menu_shimmer_effect" translatable="false">Shimmer Effect</string>
    <string name="menu_morph_view" translatable="false">Morph views</string>
    <string name="menu_nav_bootstrap" translatable="false">Bootstrap</string>
    <string name="menu_nav_auth" translatable="false">Auth</string>
    <string name="menu_avatar_viewer" translatable="false">Avatar Viewer</string>
    <string name="menu_avatar_maker" translatable="false">Avatar Maker</string>
    <string name="text_graph_2" translatable="false">Graph 2</string>
    <string name="menu_linear" translatable="false">Linear</string>
    <string name="menu_grid" translatable="false">Grid</string>
    <string name="ui_login_phone" translatable="false">Phone</string>
    <string name="ui_runtime_mode" translatable="false">Testing</string>
    <string name="ui_login_password" translatable="false">Password</string>
    <string name="ui_btn_select_mode" translatable="false">Select Mode</string>
    <string name="ui_btn_register_send" translatable="false">Send</string>
    <string name="ui_login_remember" translatable="false">Remember Me</string>
    <string name="ui_btn_register" translatable="false">Register</string>
    <string name="ui_link_account_register" translatable="false">No account yet?</string>
    <string name="ui_message_confidence" translatable="false">By authorizing, you agree to the <a href="http://inowave.website/">Terms and Privacy Policy</a></string>
    <string name="client_create" translatable="false">Create client</string>
    <string name="client_type_base" translatable="false">Base</string>
    <string name="client_source_system" translatable="false">System</string>
    <string name="client_ident_phone" translatable="false">Phone</string>
    <string name="client_input_phone" translatable="false">Phone</string>
    <string name="client_input_fio" translatable="false">Client Name</string>
    <string name="client_input_type" translatable="false">Client Type</string>
    <string name="client_input_source" translatable="false">Find out source</string>
    <string name="action_ok" translatable="false">OK</string>
    <string name="action_test" translatable="false">test</string>
    <string name="action_example_1" translatable="false">Two layouts</string>
    <string name="action_example_2" translatable="false">One layout</string>
    <string name="name_anna" translatable="false">Anna</string>
    <string name="name_maria" translatable="false">Maria</string>
    <string name="name_georgy" translatable="false">Georgy</string>
    <string name="name_hint" translatable="false">Kid name</string>
    <string name="parent_hint" translatable="false">Parent</string>
    <string name="parent_label" translatable="false">Label</string>
    <string name="parent_placeholder" translatable="false">Placeholder</string>
    <string name="child_hint" translatable="false">Hint</string>
    <string name="scene_title" translatable="false">Scene Animations</string>
    <string name="scene_one" translatable="false">Scene one</string>
    <string name="scene_two" translatable="false">Scene two</string>
    <string name="scene_three" translatable="false">Scene three</string>
    <string name="scene_four" translatable="false">Scene four</string>
    <string name="scene_about" translatable="false">Scenes store the state of a view hierarchy, including all its views and their property values. The transitions framework can run animations between a starting and an ending scene</string>
    <string name="list_item_0" translatable="false">Laravel</string>
    <string name="list_item_1" translatable="false">Ruby on Rails</string>
    <string name="list_item_2" translatable="false">Django</string>
    <string name="list_item_3" translatable="false">Angular</string>
    <string name="list_item_4" translatable="false">ASP.NET</string>
    <string name="list_item_5" translatable="false">METEOR</string>
    <string name="list_item_6" translatable="false">Express</string>
    <string name="list_item_7" translatable="false">Spring</string>
    <string name="list_item_8" translatable="false">PLAY</string>
    <string name="list_item_9" translatable="false">CodeIgniter</string>
    <string name="title_activity_swipe_with_undo" translatable="false">SwipeWithUndoActivity</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="menu_checkbox_undo" translatable="false">Undo</string>
    <string name="menu_add_5_items" translatable="false">Add 5 items</string>
    <string name="doer_action_confirm" translatable="false">Confirm</string>
    <string name="doer_action_refuse" translatable="false">Refuse</string>
    <string name="doer_action_status" translatable="false">Change status</string>
    <string name="doer_action_delete" translatable="false">Delete</string>
    <string name="hint_select_action" translatable="false">Drag horizontally</string>
    <string name="order_title" translatable="false">Order title</string>
    <string name="order_details" translatable="false">Repair cosmetic damage</string>
    <string name="tv_first" translatable="false">We create a HTML dynamically</string>
    <string name="tv_second" translatable="false">Just a minute&#8230;</string>
    <string name="ui_day_today">Today</string>
    <string name="ui_day_tomorrow">Tomorrow</string>
    <string name="ui_day_yesterday">Yesterday</string>
    <string name="swipe_item_view" translatable="false">Swipe Me</string>
    <string name="text_view_blue" translatable="false">Blue View</string>
    <string name="text_view_green" translatable="false">Green View</string>
    <string name="text_view_red" translatable="false">Red View</string>
    <string name="text_view_gray" translatable="false">Gray View</string>
    <string name="text_view_purple" translatable="false">Purple View</string>
    <string name="btn_order_refuse" translatable="false">Refuse</string>
    <string name="btn_select_mode" translatable="false">Select Mode</string>
</resources>