<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_from_root_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/shape_oval_red"
        android:contentDescription="@null"
        android:transitionName="@string/shared_transition_red_ball" />

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/shape_oval_blue"
        android:contentDescription="@null"
        android:transitionName="@string/shared_transition_blue_ball" />

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_oval_orange"
        android:contentDescription="@null"
        android:transitionName="@string/shared_transition_orange_ball" />

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_gravity="center"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_oval_green"
        android:contentDescription="@null"
        android:transitionName="@string/shared_transition_green_ball" />

</FrameLayout>

