<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="12dp"
    android:paddingEnd="12dp"
    tools:context=".theme.ThemeActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_last"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="8dp"
        android:hint="@string/parent_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_text_last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_first"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="8dp"
        android:hint="@string/parent_hint"
        android:theme="@style/CustomTextInputOverlay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_text_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_second"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="8dp"
        android:hint="@string/parent_hint"
        android:theme="@style/CustomTextInputOverlay">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_text_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_third"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="8dp"
        android:theme="@style/CustomTextInputOverlay">

        <AutoCompleteTextView
            android:id="@+id/input_children"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Custom.TextInput.Box.And.Label.Style"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="8dp"
        android:hint="@string/parent_label"
        android:theme="@style/Custom.TextInput.Box.And.Label.Theme"
        app:placeholderText="@string/parent_placeholder">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/Custom.TextEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>